# husqvarna-701-rag-support

./: .gitignore  Dockerfile  Makefile  README.md  directory_structure.md  docker-compose.yml  enhanced_brake_demo.md  latest_multimodal_demo.md  processing_status_summary.md  pyproject.toml  requirements-dev.txt  requirements.txt
config/: development.yaml  production.yaml
docs/guides/: installation.md
docs/user/: image_guide.md  query_guide.md
notebooks/: 01_husqvarna_rag_demo.ipynb  03_rag_testing.ipynb
scripts/setup/: create_bigquery_resources.py  setup_gcp_apis.py
src/husqbot/api/: fastapi_app.py
src/husqbot/api/routes/: query.py
src/husqbot/cli/: advanced_testing.py  batch_process.py  generate_embeddings.py  generate_embeddings_fast.py  interactive_query.py  main.py  process_images.py  test_rag.py
src/husqbot/cli/commands/: query.py
src/husqbot/core/: config.py  intent_detection.py  rag_system.py  response_enhancement.py  response_generation.py  safety_enhancement.py
src/husqbot/data/: document_processor.py  image_processor.py  pdf_splitter.py  process_manuals.py
src/husqbot/models/: embedding_models.py  embeddings.py  generation_models.py
src/husqbot/storage/: bigquery_client.py  bigquery_setup.py  vector_search.py
tests/: conftest.py
tests/unit/test_core/: test_rag_system.py
